* Wed Jun 22 2022 Yehuda Katz <ykatz@cs.umd.edu> - 7.4.1
- Allow `krb5_server` to be optional as implemented in the template

* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.4.0
- Update from camptocamp/systemd to puppet/systemd

* Thu May 26 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.3.0
- Changed:
  - Made provider parameters Optional to support certain AD/realmd configurations:
     - sssd::provider::krb5::krb5_server
     - sssd::provider::ldap::ldap_search_base
     - sssd::provider::ldap::ldap_default_bind_dn
- Fixed:
  - nil? bug in template for ad provider

* Fri Aug 27 2021 Henry Pauli <henry+spam@mixict.nl> - 7.2.0
- Add an option in sssd::install to not install sssd client.
  This aids in better compatibility with non RedHat based systems
  where the ssssd-client package may not exists.

* Thu Aug 05 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.1.1
- Add an override for sssd-sudo.service to start it as root:root. This aligns
  with how sssd itself would start the service and the daemon cannot access
  /var/lib/sss/db/config.ldb otherwise.

* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.1.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Jun 03 2021 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.0.2
- Added tests for ds389 ldap server
- SSSD will not start and the module fail if no domains are
  defined.  The enable_files_domain setting is set to true to ensure
  that sssd will start.

* Wed Jun 02 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1
- Fixed:
  - sssd-sudo.socket service

* Wed May 19 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0
- Fixed:
  - `sssd::provider::ldap::ldap_pwd_policy` is based on the value in
    `ldap_account_expire_policy` to properly account for non-shadow systems
  - `sssd::provider::ldap::ldap_access_order` is set to the modern set
  - A typo in the `sssd::LdapAccountExpirePol` data type was fixed