@@ -85,6 +85,14 @@
 # @param ldap_use_tokengroups
 # @param ldap_group_objectsid
 # @param ldap_user_objectsid
+# @param ldap_user_extra_attrs
+#   Can be used to enable public key storage for ssh
+#   When used this way, set this param and param ldap_user_ssh_public_key
+#   to 'altSecurityIdentities'
+# @param ldap_user_ssh_public_key
+#   Can be used to enable public key storage for ssh
+#   When used this way, set this param and param ldap_user_extra_attrs
+#   to 'altSecurityIdentities'
 #
 # @author https://github.com/simp/pupmod-simp-sssd/graphs/contributors
 #
@@ -139,6 +147,8 @@ define sssd::provider::ad (
   Boolean                                                    $ldap_use_tokengroups                     = true,
   Optional[String[1]]                                        $ldap_group_objectsid                     = undef,
   Optional[String[1]]                                        $ldap_user_objectsid                      = undef,
+  Optional[String[1]]                                        $ldap_user_extra_attrs                    = undef,
+  Optional[String[1]]                                        $ldap_user_ssh_public_key                 = undef,
 ) {
   sssd::config::entry { "puppet_provider_${name}_ad":
     content => template("${module_name}/provider/ad.erb")
