@@ -150,3 +150,9 @@ ldap_group_objectsid = <%= @ldap_group_objectsid %>
 <% if @ldap_user_objectsid -%>
 ldap_user_objectsid = <%= @ldap_user_objectsid %>
 <% end -%>
+<% if @ldap_user_extra_attrs -%>
+ldap_user_extra_attrs = <%= @ldap_user_extra_attrs %>
+<% end -%>
+<% if @ldap_user_ssh_public_key -%>
+ldap_user_ssh_public_key = <%= @ldap_user_ssh_public_key %>
+<% end -%>
