@@ -1,3 +1,8 @@
+* Fri Jul 15 2022 Mark Fitch <mark.fitch1@hotmail.com> - 7.4.1
+  - Fixed:
+    - Added missing parameters `ldap_user_extra_attrs` and
+      `ldap_user_ssh_public_key` to allow SSH keys to be fetched from AD
+
 * Wed Jun 22 2022 Yehuda Katz <ykatz@cs.umd.edu> - 7.4.1
 - Allow `krb5_server` to be optional as implemented in the template
 
